fix max width on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,8 @@ main {
 .vertical-line {
     border-left: 2px solid hsl(var(--bc));
 }
+
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
